--- a/demo-app/Dockerfile
+++ b/demo-app/Dockerfile
@@ -1,5 +1,6 @@
-# Alpine image
-FROM eclipse-temurin:17-alpine
+# Bad Dockerfile
+# FROM openjdk:17-jdk
+FROM eclipse-temurin:17
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
