--- a/demo-app/Dockerfile
+++ b/demo-app/Dockerfile
@@ -1,6 +1,6 @@
-# Good Dockerfile
+# BAD Dockerfile
 # Alpine image
-FROM eclipse-temurin:17-alpine
+FROM eclipse-temurin:17
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
