--- a/policy/kritis/vulnz-signing-policy.yaml
+++ b/policy/kritis/vulnz-signing-policy.yaml
@@ -4,9 +4,8 @@ metadata:
   name: my-vsp
 spec:
   imageVulnerabilityRequirements:
-    maximumFixableSeverity: HIGH
-    maximumUnfixableSeverity: CRITICAL 
+    maximumFixableSeverity: MEDIUM
+    maximumUnfixableSeverity: LOW
     allowlistCVEs:
     - projects/goog-vulnz/notes/CVE-2020-14155
     - projects/goog-vulnz/notes/CVE-2019-25013
-    - projects/goog-vulnz/notes/CVE-2022-31692
