--- a/policy/kritis/vulnz-signing-policy.yaml
+++ b/policy/kritis/vulnz-signing-policy.yaml
@@ -4,8 +4,9 @@ metadata:
   name: my-vsp
 spec:
   imageVulnerabilityRequirements:
-    maximumFixableSeverity: MEDIUM
-    maximumUnfixableSeverity: LOW
+    maximumFixableSeverity: HIGH
+    maximumUnfixableSeverity: MEDIUM
     allowlistCVEs:
     - projects/goog-vulnz/notes/CVE-2020-14155
     - projects/goog-vulnz/notes/CVE-2019-25013
+    - projects/goog-vulnz/notes/CVE-2022-31692
